- fixes a bug where keyboard is not displayed if shift buttons are disabled - updates style name - updates sample JavaScript for embedding - adds remove button in sample - updates readme accordingly

--- a/piano_style.css
+++ b/piano_style.css
@@ -101,10 +101,9 @@ ul.DA-PianoKeyboard li:last-of-type {
 .DA-Keyboardcontainer button {
     display: inline-block;
     cursor: pointer;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.0);
     margin: 10px;
     border-style: none;
-    border-color: #000;
     padding: 10px;
     text-align: center;
     vertical-align: top;
